--- a/free_difficulty.ui
+++ b/free_difficulty.ui
@@ -28,7 +28,6 @@
       <property name="font">
        <font>
         <pointsize>30</pointsize>
-        <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
@@ -57,6 +56,18 @@
       <property name="spacing">
        <number>20</number>
       </property>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="font">
+         <font>
+          <pointsize>15</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Hauteur</string>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_2">
         <property name="font">
@@ -66,35 +77,6 @@
         </property>
         <property name="text">
          <string>Largeur</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="hauteur_input">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="largeur_input">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="inputMethodHints">
-         <set>Qt::ImhDigitsOnly</set>
-        </property>
-        <property name="text">
-         <string/>
         </property>
        </widget>
       </item>
@@ -111,26 +93,13 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLineEdit" name="pourcentage_input">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-       </widget>
+       <widget class="QSpinBox" name="pourcentage_input"/>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="font">
-         <font>
-          <pointsize>15</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string>Hauteur</string>
-        </property>
-       </widget>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="largeur_input"/>
+      </item>
+      <item row="1" column="1">
+       <widget class="QSpinBox" name="hauteur_input"/>
       </item>
      </layout>
     </item>
