--- a/game.ui
+++ b/game.ui
@@ -40,17 +40,81 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>1010</x>
+     <x>1020</x>
      <y>40</y>
-     <width>271</width>
+     <width>291</width>
      <height>1051</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QLabel" name="flag">
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="1">
+       <widget class="QLabel" name="time">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>&lt;html&gt;
+&lt;head/&gt;
+&lt;body&gt;
+&lt;p&gt;&lt;img src=&quot;:/images/time.png&quot; width=&quot;32&quot;/&gt;&lt;/p&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLabel" name="flag_count">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>&lt;html&gt;
+&lt;head/&gt;
+&lt;body&gt;
+&lt;p&gt;&lt;img src=&quot;:/images/flag.png&quot; width=&quot;32&quot; height=&quot;32&quot;/&gt;&lt;/p&gt;
+&lt;/body&gt;
+&lt;/html&gt;
+</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="QPushButton" name="change_difficulty">
       <property name="text">
-       <string>TextLabel</string>
+       <string>Changer la difficulté</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="restart">
+      <property name="text">
+       <string>Recommencer</string>
       </property>
      </widget>
     </item>
