--- a/free_difficulty.ui
+++ b/free_difficulty.ui
@@ -88,7 +88,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Pourcentage de Mine</string>
+         <string>Mine</string>
         </property>
        </widget>
       </item>
