--- a/game.ui
+++ b/game.ui
@@ -2,125 +2,122 @@
 <ui version="4.0">
  <class>GameWindow</class>
  <widget class="QDialog" name="GameWindow">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>1320</width>
-    <height>1099</height>
-   </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
   <property name="windowTitle">
    <string>Démineur</string>
   </property>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>1051</width>
-     <height>1081</height>
-    </rect>
-   </property>
-   <layout class="QGridLayout" name="gridMines">
-    <property name="sizeConstraint">
-     <enum>QLayout::SetNoConstraint</enum>
-    </property>
-    <property name="spacing">
-     <number>0</number>
-    </property>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="verticalLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>1070</x>
-     <y>10</y>
-     <width>241</width>
-     <height>1081</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="1">
-       <widget class="QLabel" name="flag_count">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_3">
-        <property name="text">
-         <string>&lt;html&gt;
-&lt;head/&gt;
-&lt;body&gt;
-&lt;p&gt;&lt;img src=&quot;:/images/time.png&quot; width=&quot;40&quot;/&gt;&lt;/p&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLabel" name="time">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>&lt;html&gt;
-&lt;head/&gt;
-&lt;body&gt;
-&lt;p&gt;&lt;img src=&quot;:/images/flag.png&quot; width=&quot;40&quot; height=&quot;40&quot;/&gt;&lt;/p&gt;
-&lt;/body&gt;
-&lt;/html&gt;
-</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
-    <item>
-     <widget class="QPushButton" name="change_difficulty">
-      <property name="text">
-       <string>Changer la difficulté</string>
+  <layout class="QVBoxLayout" name="verticalLayout_WholeWindow">
+   <item>
+    <widget class="QScrollArea" name="gameAreaScroll">
+     <property name="widgetResizable">
+      <bool>true</bool>
+     </property>
+     <widget class="QWidget" name="scrollAreaWidgetContents">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
+      <layout class="QGridLayout" name="gridMines"/>
      </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="restart">
-      <property name="text">
-       <string>Recommencer</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_Controls">
+     <item>
+      <widget class="QPushButton" name="change_difficulty">
+       <property name="text">
+        <string>Changer la difficulté</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="restart">
+       <property name="text">
+        <string>Recommencer</string>
+       </property>
+      </widget>
+     </item>
+     
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Expanding</enum>
+       </property>
+      </spacer>
+     </item>
+     
+	<item>
+	  <widget class="QLabel" name="labelFlagIcon">
+	    <property name="pixmap">
+	      <pixmap>:/images/flag.png</pixmap>
+	    </property>
+	    <property name="scaledContents">
+	      <bool>true</bool>
+	    </property>
+	    <property name="minimumSize">
+	      <size>
+		<width>24</width>
+		<height>24</height>
+	      </size>
+	    </property>
+	    <property name="maximumSize">
+	      <size>
+		<width>24</width>
+		<height>24</height>
+	      </size>
+	    </property>
+	  </widget>
+	</item>
+     
+     <item>
+      <widget class="QLabel" name="flag_count">
+       <property name="text">
+        <string>0/0</string>
+       </property>
+      </widget>
+     </item>
+     
+	<item>
+	  <widget class="QLabel" name="labelTimeIcon">
+	    <property name="pixmap">
+	      <pixmap>:/images/time.png</pixmap>
+	    </property>
+	    <property name="scaledContents">
+	      <bool>true</bool>
+	    </property>
+	    <property name="minimumSize">
+	      <size>
+		<width>24</width>
+		<height>24</height>
+	      </size>
+	    </property>
+	    <property name="maximumSize">
+	      <size>
+		<width>24</width>
+		<height>24</height>
+	      </size>
+	    </property>
+	  </widget>
+	</item>
+     
+     <item>
+      <widget class="QLabel" name="time">
+       <property name="text">
+        <string>00:00</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
+
