Nouveau bouton controlant le son

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,6 +3,8 @@
         <file>images/flag.png</file>
         <file>images/mine.png</file>
         <file>images/time.png</file>
+        <file>images/sound-on.png</file>
+        <file>images/sound-off.png</file>
         <file>assets/discover-click.wav</file>
         <file>assets/exit-game.wav</file>
         <file>assets/click-start-game.wav</file>
