--- a/choose_difficulty.ui
+++ b/choose_difficulty.ui
@@ -41,21 +41,37 @@ QPushButton { background-color: rgb(119, 118, 123); }
      <number>10</number>
     </property>
     <item>
-     <widget class="QLabel" name="label">
-      <property name="font">
-       <font>
-        <pointsize>20</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>Bienvenue sur notre démineur</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
+     <layout class="QHBoxLayout" name="headerLayout">
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <pointsize>20</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Bienvenue sur notre démineur</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="soundButton">
+        <property name="styleSheet">
+         <string notr="true">
+QPushButton { max-width: 40px; max-height: 40px; }
+</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>images/sound-off.png</normaloff>images/sound-off.png</iconset>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
@@ -79,7 +95,6 @@ QPushButton { background-color: rgb(119, 118, 123); }
         <property name="font">
          <font>
           <pointsize>20</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -104,7 +119,6 @@ QPushButton { background-color: rgb(255, 190, 111); }
         <property name="font">
          <font>
           <pointsize>20</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -135,7 +149,6 @@ QPushButton { background-color: rgb(255, 190, 111); }
         <property name="font">
          <font>
           <pointsize>20</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
@@ -160,7 +173,6 @@ QPushButton { background-color: rgb(255, 190, 111); }
         <property name="font">
          <font>
           <pointsize>20</pointsize>
-          <weight>75</weight>
           <bold>true</bold>
          </font>
         </property>
