--- a/choose_difficulty.ui
+++ b/choose_difficulty.ui
@@ -72,7 +72,7 @@
                                     </string>
         </property>
         <property name="text">
-         <string>Scores</string>
+         <string>Tableau des scores</string>
         </property>
        </widget>
       </item>
